--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -9,7 +9,7 @@
 }
 
 .navbar.navbar-bg {
-    background: #444;
+    background: rgb(68, 68, 68);
     background: rgba(0, 0, 0, 0.3);
 }
 
@@ -31,22 +31,22 @@
  
 .navbar-dark .navbar-nav {
     font-size: 15px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-weight: 600;
 }
  
 .navbar-dark .navbar-nav .nav-link {
-    color: #fff;
+    color: rgb(255, 255, 255);
     color: rgba(255, 255, 255, 0.61);
     border: 0;
 }
  
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
  
 .navbar-dark .navbar-nav .nav-link:focus {
-    color: #fff;
+    color: rgb(255, 255, 255);
     outline: 0;
 }
 
