--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Molle:400i|Open+Sans+Condensed:300,700');
+@import url("https://fonts.googleapis.com/css?family=Molle:400i|Open+Sans+Condensed:300,700");
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web&display=swap");
+
       
   html,body {
   margin: 0;
@@ -342,17 +344,18 @@ body  {
 }
 
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 960px) {
 
 .slider-list-item .more-element .content .excerpt {
-    font-size: 3vw;
+    margin-top: 20px;
+    font-size: 2.5vw;
     max-width: 180px;
     font-weight: 500;
     text-align: justify;
   }
 
   .slider-list-item .more-element .content {
-    margin: 34px auto;
+    margin: 24px auto;
     padding: 0 32px;
     color: #2e3131;
     text-align: left;
